# Inventory-Manager

./: .dockerignore  .env.example  .eslintrc.json  .flake8  .gitignore  .gitmodules  .mypy.ini  .prettierrc  .ruff.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  eslint.config.ts  out-inspect.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.devcontainer/: backend-workspace.code-workspace  branch-reactivated-dev.code-workspace  devcontainer.json  docker-compose.yml  frontend-workspace.code-workspace
api/: interfaces_request.py  serializers.py  types.py  urls.py  util.py  views.py
client/: forms.tsx  index.tsx  styles.tsx  types.ts
client/components/: BarcodeScanner.tsx  ButtonWithSpinner.tsx  ContribMessages.tsx  Layout.tsx  LoadingSpinner.tsx  NavLink.tsx  Navbar.tsx  NavbarProductLocator.tsx  Pagination.tsx  ProductLocatorModal.tsx  ProductLocatorScanner.tsx  StorePicker.tsx  StoreSelector.tsx  ToastMessage.tsx  widgets.tsx
client/hooks/: useFetch.ts
client/html/: 400.html  403.html  404.html  500.html
client/scss/: _variables.scss  shared.scss
client/styles/: _variables.scss  bs-navbar-overrides.css.map  bs-overrides.css  bs-overrides.css.map  bs-overrides.scss  shared.css  shared.css.map  shared.scss
client/templates/: HomepageIndex.tsx  LoggerBarcodeSheet.tsx  ProductLocatorAddNewProducts.tsx  ProductLocatorIndex.tsx  ProductLocatorManagePlanograms.tsx  ProductLocatorPlanogramUpdates.tsx  ProductLocatorScanAudit.tsx  QtAdmin.tsx  QtAutofillLogs.tsx  QtIndex.tsx  QtRepSessionDetails.tsx  QtScheduleView.tsx  QtTerritoryViewer.tsx  QtUpdateSchedule.tsx  ScanAuditPage.tsx  StockTrackerBarcodeSheet.tsx  StockTrackerBarcodeSheetsHistory.tsx  StockTrackerScanHistory.tsx  StockTrackerScanner.tsx  StocktrackerStoreManagerNames.tsx  SurveyWorkerIndex.tsx  SurveyWorkerLauncher.tsx  SurveyWorkerManualCmkUrls.tsx  SurveyWorkerRepSyncDataViewer.tsx  SurveyWorkerTaskAdminer.tsx  SurveyWorkerTerritoryViewer.tsx  SurveyWorkerTicketSubmit.tsx  SurveyWorkerWebHub.tsx
client/util/: commonUtil.ts  productLocatorUtil.ts  stockTrackerUtil.ts
homepage/: templates.py  urls.py  views.py
inventory_manager/: env_setup.py  settings.py  urls.py
inventory_manager/inventory_manager/: asgi.py  settings.py  urls.py  wsgi.py
inventory_manager/logger/: urls.py
inventory_manager/products/: admin.py  models.py
logger/: forms.py  serializers.py  template_interfaces.py  templates.py  types.py  urls.py  util.py  views.py
product_locator/: admin.py  apps.py  forms.py  interfaces_response.py  models.py  planogram_parser.py  serializers.py  templates.py  tests.py  types.py  urls.py  util.py  views.py
product_locator/ajax/: interfaces_request.py  interfaces_response.py  views.py
product_locator/api/: serializers.py  views.py
product_locator/migrations/: 0001_initial.py  0001_initial_squashed_0006_store_alter_planogram_name_planogram_store_and_more.py  0002_alter_product_name.py  0002_planogram_date_end_planogram_date_start_and_more.py  0002_planogram_date_end_planogram_date_start_and_more_squashed_0003_alter_planogram_date_end.py  0003_alter_planogram_date_end.py  0003_productscanaudit.py  0003_rename_location_homelocation_name.py  0004_alter_planogram_name_alter_product_upc_and_more.py  (+6 more)
products/: admin.py  helpers.py  models.py  serializers.py  tasks.py  tests.py  types.py  util.py
server/: asgi.py  context_processors.py  env_setup.py  settings.py  urls.py  views.py  wsgi.py
stock_tracker/: apps.py  serializers.py  templates.py  types.py  urls.py  util.py  views.py
upc_manager/: manage.py
(+280 files in other folders)
