[project]
name = "inventory-manager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "Django==5.0.2",
    "reactivated==0.47.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "django-stubs>=5.0.2,<6.0.0",
    "django-stubs-ext>=5.0.2,<6.0.0",
    "requests>=2.32.3,<3.0.0",
    "djangorestframework>=3.15.2,<4.0.0",
    "cattrs>=25.1.0,<26.0.0",
    "django-widget-tweaks>=1.4.12,<2.0.0",
    "checkdigit>=0.5.0,<0.6.0",
    "pytz>=2023.3,<2024.0",
    "django-cors-headers>=4.1.0,<5.0.0",
    "python-barcode>=0.14.0,<0.15.0",
    "django-cleanup>=8.0.0,<9.0.0",
    "redis>=4.5.5,<5.0.0",
    "natsort>=8.3.1,<9.0.0",
    "uvicorn>=0.22.0,<0.23.0",
    "requests-html>=0.10.0,<0.11.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
    "sqlparse>=0.4.4,<0.5.0",
    "sql-metadata>=2.8.0,<3.0.0",
    "usaddress>=0.5.13,<0.6.0",
    "pillow>=11.2.1",
    "types-pillow>=10.2.0.20240822",
    "django-tasks-scheduler>=4.0.5",
    "lxml[html-clean]>=6.0.0",
]

[dependency-groups]
dev = [
    "djangorestframework-stubs>=3.15.1,<4.0.0",
    "ruff>=0.7.3,<1.0.0",
    "types-pytz>=2025.1.0.20250204,<2026.0.0",
    "types-redis>=4.6.0.3,<5.0.0",
    "types-beautifulsoup4>=4.12.0.6,<5.0.0",
    "types-simplejson>=3.19.0.2,<4.0.0",
]
