[project]
name = "inventory-manager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.1"
authors = [
    { name = "mmonj", email = "mmonj@users.noreply.github.com" }
]

dependencies = [
    "Django==5.0.2",
    "reactivated==0.47.4",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "django-stubs>=5.0.2,<6.0.0",
    "django-stubs-ext>=5.0.2,<6.0.0",
    "django-tasks-scheduler==4.0.6",
    "requests>=2.32.3,<3.0.0",
    "djangorestframework>=3.15.2,<4.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "lxml[html-clean]>=5.3.0,<6.0.0",
    "cattrs>=25.1.0,<26.0.0",
    "natsort>=8.4.0,<9.0.0",
    "django-allauth>=65.11.0",
    "django-extensions>=4.1",
    "redis>=6.4.0",
    "uvicorn>=0.35.0",
    "django-widget-tweaks>=1.5.0",
    "checkdigit>=0.5.0",
    "pytz>=2025.2",
    "requests-html>=0.10.0",
    "python-barcode>=0.16.1",
    "types-pillow>=10.2.0.20240822",
    "usaddress>=0.5.16",
    "django-cors-headers>=4.9.0",
    "django-cleanup>=9.0.0",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "djangorestframework-stubs>=3.15.1,<4.0.0",
    "types-beautifulsoup4>=4.12.0.20241020,<5.0.0",
    "ruff>=0.7.3,<1.0.0",
    "types-pytz>=2025.1.0.20250204,<2026.0.0"
]
