[project]
name = "inventory-manager"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.9.7"
authors = [
    { name = "mmonj", email = "mmonj@users.noreply.github.com" }
]

dependencies = [
    "beautifulsoup4>=4.14.2",
    "cattrs>=25.3.0",
    "checkdigit>=0.5.0",
    "django==4.0.1",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.5.0",
    "django-rq>=3.1",
    "django-stubs[compatible-mypy]>=5.1.3",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.15.1",
    "djangorestframework-stubs[compatible-mypy]>=3.15.3",
    "lxml[html-clean]>=6.0.2",
    "natsort>=8.4.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "python-barcode>=0.16.1",
    "pytz>=2025.2",
    "reactivated==0.30.2",
    "redis>=7.0.1",
    "requests-html>=0.10.0",
    "rq-scheduler>=0.14.0",
    "setuptools>=80.9.0",
    "sql-metadata>=2.18.0",
    "sqlparse>=0.5.3",
    "usaddress>=0.5.16",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
]
